<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>gestionnaire</artifactId>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.3.1</version>
      </plugin>
      <!-- Tests -->
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <dependencies>
          <dependency>
            <artifactId>junit-jupiter-engine</artifactId>
            <groupId>org.junit.jupiter</groupId>
            <version>5.7.2</version>
          </dependency>
        </dependencies>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.0.0-M4</version>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>2.22.2</version>
      </plugin>
      <plugin>
        <artifactId>payara-micro-maven-plugin</artifactId>
        <configuration>
          <javaCommandLineOptions>
            <option>
              <key>-Djavamelody.datasources</key>
              <value>java:app/PostgreSQLDS</value>
            </option>
          </javaCommandLineOptions>
          <commandLineOptions>
            <option>
              <key>--nocluster</key>
            </option>
          </commandLineOptions>
          <payaraVersion>5.2022.5</payaraVersion>
          <useUberJar>true</useUberJar>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>bundle</goal>
            </goals>
          </execution>
        </executions>
        <groupId>fish.payara.maven.plugins</groupId>
        <version>2.0</version>
      </plugin>
      <!-- Coveralls -->
      <plugin>
        <artifactId>coveralls-maven-plugin</artifactId>
        <groupId>org.eluder.coveralls</groupId>
        <version>4.3.0</version>
        <!-- Not needed, using Travis CI -->
        <!--
        <configuration>
            <repoToken>yourcoverallsprojectrepositorytoken</repoToken>
        </configuration>
        -->
      </plugin>
      <plugin>
        <artifactId>jacoco-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <id>default-prepare-agent</id>
          </execution>
          <execution>
            <goals>
              <goal>prepare-agent-integration</goal>
            </goals>
            <id>default-prepare-agent-integration</id>
          </execution>
          <execution>
            <goals>
              <goal>report</goal>
            </goals>
            <id>default-report</id>
          </execution>
          <execution>
            <goals>
              <goal>report-integration</goal>
            </goals>
            <id>default-report-integration</id>
          </execution>
        </executions>
        <groupId>org.jacoco</groupId>
        <version>0.8.7</version>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <!-- Jakarta EE dependencies -->
    <dependency>
      <artifactId>jakarta.jakartaee-api</artifactId>
      <groupId>jakarta.platform</groupId>
      <scope>provided</scope>
      <version>8.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.5.4</version>
    </dependency>
    <dependency>
      <artifactId>javamelody-core</artifactId>
      <groupId>net.bull.javamelody</groupId>
      <version>1.91.0</version>
    </dependency>
    <dependency>
      <artifactId>primefaces</artifactId>
      <groupId>org.primefaces</groupId>
      <version>11.0.0</version>
    </dependency>
    <dependency>
      <artifactId>bootstrap</artifactId>
      <groupId>org.webjars</groupId>
      <version>3.4.1</version>
    </dependency>
    <dependency>
      <artifactId>metismenu</artifactId>
      <groupId>org.webjars.npm</groupId>
      <version>2.6.1</version>
    </dependency>
    <dependency>
      <artifactId>startbootstrap-sb-admin-2</artifactId>
      <groupId>org.webjars.npm</groupId>
      <version>3.3.7</version>
    </dependency>
    <dependency>
      <artifactId>spring-security-crypto</artifactId>
      <groupId>org.springframework.security</groupId>
      <version>5.6.2</version>
    </dependency>
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.2</version>
    </dependency>
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-entitymanager</artifactId>
      <version>5.6.5.Final</version>
    </dependency>

    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>provided</scope>
      <version>1.18.20</version>
    </dependency>
    <!-- Data Exporter -->
    <dependency>
      <artifactId>liquibase-core</artifactId>
      <groupId>org.liquibase</groupId>
      <version>4.18.0</version>
    </dependency>
    <dependency>
      <artifactId>poi</artifactId>
      <groupId>org.apache.poi</groupId>
      <version>4.1.1</version>
    </dependency>
    <dependency>
      <artifactId>poi-ooxml</artifactId>
      <groupId>org.apache.poi</groupId>
      <version>4.1.1</version>
    </dependency>
    <dependency>
      <artifactId>itext</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>bcmail-jdk14</artifactId>
          <groupId>bouncycastle</groupId>
        </exclusion>
        <exclusion>
          <artifactId>bcprov-jdk14</artifactId>
          <groupId>bouncycastle</groupId>
        </exclusion>
        <exclusion>
          <artifactId>bctsp-jdk14</artifactId>
          <groupId>org.bouncycastle</groupId>
        </exclusion>
      </exclusions>
      <groupId>com.lowagie</groupId>
      <version>2.1.7</version>
    </dependency>
    <!-- End Data Exporter -->
    <dependency>
      <artifactId>commons-lang3</artifactId>
      <groupId>org.apache.commons</groupId>
      <version>3.12.0</version>
    </dependency>
    <!-- Tests -->
    <dependency>
      <artifactId>junit-jupiter-api</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>5.9.1</version>
    </dependency>
    <dependency>
      <artifactId>mockito-junit-jupiter</artifactId>
      <groupId>org.mockito</groupId>
      <scope>test</scope>
      <version>3.11.2</version>
    </dependency>
    <!-- End Tests -->
  </dependencies>
  <developers>
    <developer>
      <email>paolo@hubesco.com</email>
      <id>paoesco</id>
      <name>Paolo</name>
      <url>https://hubesco.com/blog</url>
    </developer>
  </developers>
  <groupId>fr.famivac</groupId>

  <inceptionYear>2015</inceptionYear>

  <modelVersion>4.0.0</modelVersion>

  <name>gestionnaire</name>
  <packaging>war</packaging>

  <properties>
    <additionalparam>-Xdoclint:none</additionalparam>
    <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
    <failOnMissingWebXml>false</failOnMissingWebXml>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <skipUnitTests>false</skipUnitTests>
  </properties>

  <scm>
    <connection>scm:git:ssh://git@github.com/famivac/famivac-gestionnaire.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/famivac/famivac-gestionnaire.git
    </developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/famivac/famivac-gestionnaire</url>
  </scm>

  <url>https://gestionnaire.famivac.fr</url>

  <version>2.0.0</version>

</project>
